--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,25 @@ spring.application.name=spring-boot
 server.port=9000
 
 #H2 DB Config
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Oracle 19c
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLCDB
+spring.datasource.username=SYS as SYSDBA
+spring.datasource.password=mypassword1
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# Specify the role for the SYS user if necessary (e.g., SYSDBA)
+#spring.datasource.hikari.data-source-properties.oracle.jdbc.editionName=SYSDBA
+
+
+# Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+
 
 # Print sql in console
 spring.jpa.show-sql=true
